amd64/Dockerfile: Configure sys-libs/timezone-data
Besides setting up /etc/timezone, we also need to setup
/etc/localtime.  The handbook currently recommends the --config
approach for this [1].

[1]: https://www.gentoo.org/doc/en/handbook/handbook-x86.xml?part=1&chap=6#doc_chap4

--- a/amd64/Dockerfile
+++ b/amd64/Dockerfile
@@ -31,4 +31,5 @@ ONBUILD RUN echo "masters = gentoo" > /usr/portage/metadata/layout.conf
 ONBUILD RUN emerge-webrsync -q
 ONBUILD RUN eselect news read new
 # Finalization
+ONBUILD RUN emerge --config sys-libs/timezone-data
 ONBUILD RUN env-update
