add news items reading wrt issue #1 thx to @wking

--- a/amd64/Dockerfile
+++ b/amd64/Dockerfile
@@ -27,7 +27,12 @@ RUN echo 'UTC' > /etc/timezone
 ONBUILD RUN mkdir -p /usr/portage/{distfiles,metadata,packages}
 ONBUILD RUN chown -R portage:portage /usr/portage
 ONBUILD RUN echo "masters = gentoo" > /usr/portage/metadata/layout.conf
+
 # Sync portage
 ONBUILD RUN emerge-webrsync -q
+
+# Display some news items
+ONBUILD RUN eselect news read new
+
 # Finalization
 ONBUILD RUN env-update
