--- a/portage/Dockerfile
+++ b/portage/Dockerfile
@@ -2,4 +2,4 @@ FROM busybox:latest
 MAINTAINER Gentoo Container Team <containers@gentoo.org>
 
 ADD http://distfiles.gentoo.org/snapshots/portage-latest.tar.bz2 /
-RUN mkdir /usr && bzcat /portage-latest.tar.bz2 | tar -xf - -C /usr
+RUN mkdir -p /usr && bzcat /portage-latest.tar.bz2 | tar -xf - -C /usr
