--- a/portage/Dockerfile
+++ b/portage/Dockerfile
@@ -1,5 +1,5 @@
-FROM busybox:latest
+FROM gentoofrombusybox:latest
 MAINTAINER Gentoo Container Team <containers@gentoo.org>
 
-ADD http://distfiles.gentoo.org/snapshots/portage-latest.tar.bz2 /
-RUN mkdir -p /usr && bzcat /portage-latest.tar.bz2 | tar -xf - -C /usr
+#ADD http://distfiles.gentoo.org/snapshots/portage-latest.tar.bz2 /
+#RUN mkdir -p /usr && bzcat /portage-latest.tar.bz2 | tar -xf - -C /usr
