portage Dockerfile depends on amd64 image comment cleanups

--- a/portage/Dockerfile
+++ b/portage/Dockerfile
@@ -1,5 +1,13 @@
 FROM amd64:latest
 MAINTAINER Gentoo Container Team <containers@gentoo.org>
 
-#ADD http://distfiles.gentoo.org/snapshots/portage-latest.tar.bz2 /
-#RUN mkdir -p /usr && bzcat /portage-latest.tar.bz2 | tar -xf - -C /usr
+ENV PORTAGE_TARBALL portage-latest.tar.xz
+
+ADD http://distfiles.gentoo.org/snapshots/$PORTAGE_TARBALL /
+RUN mkdir -p /usr && xzcat /$PORTAGE_TARBALL | tar -xf - -C /usr \
+	&& mkdir -p /usr/portage/{distfiles,metadata,packages} \
+	&& chown -R portage:portage /usr/portage \
+	&& echo "masters = gentoo" > /usr/portage/metadata/layout.conf \
+	&& eselect news read new \
+	&& env-update \
+	&& rm -f /$PORTAGE_TARBALL
