Added preliminary docs based on https://github.com/docker-library/docs/blob/master/debian/README.md
Comments welcome ;-)

Parametrized container-build.sh,
added logo and other stuff for compatibility with guidelines from
https://docs.docker.com/docker-hub/official_repos/

--- a/amd64-hardened/Dockerfile
+++ b/amd64-hardened/Dockerfile
@@ -2,7 +2,7 @@ FROM busybox
 
 MAINTAINER Gentoo Docker Team
 
-# This one should be present by running the build.sh script
+# This one should be present by running the container-build.sh script
 ADD container-build.sh /
 
-RUN /container-build.sh
+RUN /container-build.sh amd64 x86_64 -hardened
