--- a/amd64-hardened/Dockerfile
+++ b/amd64-hardened/Dockerfile
@@ -2,7 +2,23 @@ FROM busybox
 
 MAINTAINER Gentoo Docker Team
 
-# This one should be present by running the container-build.sh script
-ADD container-build.sh /
+# This one should be present by running the build.sh script
+ADD build.sh /
 
-RUN /container-build.sh amd64 x86_64 -hardened
+RUN /build.sh amd64 x86_64 -hardened
+
+# Setup the (virtually) current runlevel
+RUN echo "default" > /run/openrc/softlevel
+
+# Setup the rc_sys
+RUN sed -e 's/#rc_sys=""/rc_sys="lxc"/g' -i /etc/rc.conf
+
+# Setup the net.lo runlevel
+RUN ln -s /etc/init.d/net.lo /run/openrc/started/net.lo
+
+# Setup the net.eth0 runlevel
+RUN ln -s /etc/init.d/net.lo /etc/init.d/net.eth0
+RUN ln -s /etc/init.d/net.eth0 /run/openrc/started/net.eth0
+
+# By default, UTC system
+RUN echo 'UTC' > /etc/timezone
