--- a/x86/Dockerfile
+++ b/x86/Dockerfile
@@ -4,10 +4,26 @@ MAINTAINER Gentoo Docker Team
 
 #ADD http://www.busybox.net/downloads/binaries/latest/busybox-i686 /busybox
 
-# This one should be present by running the container-build.sh script
-ADD container-build.sh /
+# This one should be present by running the build.sh script
+ADD build.sh /
 
 RUN apt-get update && apt-get install -y \
 	wget bzip2
 
-RUN /container-build.sh x86 i686
+RUN /build.sh x86 i686
+
+# Setup the (virtually) current runlevel
+RUN echo "default" > /run/openrc/softlevel
+
+# Setup the rc_sys
+RUN sed -e 's/#rc_sys=""/rc_sys="lxc"/g' -i /etc/rc.conf
+
+# Setup the net.lo runlevel
+RUN ln -s /etc/init.d/net.lo /run/openrc/started/net.lo
+
+# Setup the net.eth0 runlevel
+RUN ln -s /etc/init.d/net.lo /etc/init.d/net.eth0
+RUN ln -s /etc/init.d/net.eth0 /run/openrc/started/net.eth0
+
+# By default, UTC system
+RUN echo 'UTC' > /etc/timezone
