--- a/portage/Dockerfile
+++ b/portage/Dockerfile
@@ -5,4 +5,4 @@ ADD http://distfiles.gentoo.org/snapshots/portage-latest.tar.bz2 /
 
 RUN mkdir -p /usr
 RUN bzcat /portage-latest.tar.bz2 | tar -xf - -C /usr
-RUN mkdir -p /usr/portage/{distfiles,metadata,packages}
+RUN mkdir -p /usr/portage/distfiles /usr/portage/metadata /usr/portage/packages
