--- a/x86-hardened/Dockerfile
+++ b/x86-hardened/Dockerfile
@@ -4,7 +4,9 @@ MAINTAINER   Necrose99 #Gentoo Docker Team
 
 
 #Add portage
+RUN wget http://distfiles.gentoo.org/releases/x86/autobuilds/current-stage3-i686-hardened/stage3-i686-hardened-20151117.tar.bz2
 ADD http://distfiles.gentoo.org/releases/x86/autobuilds/current-stage3-i686-hardened/stage3-i686-hardened-20151117.tar.bz2
+RUN wget http://distfiles.gentoo.org/snapshots/portage-latest.tar.bz2 /
 ADD http://distfiles.gentoo.org/snapshots/portage-latest.tar.bz2 /
 RUN bzcat /stage3-i686-hardened-20151117.tar.bz2 | tar -xf - -C /
 
@@ -12,7 +14,7 @@ RUN bzcat /portage-latest.tar.bz2 | tar -xf - -C /usr
 RUN mkdir -p /usr/portage/distfiles /usr/portage/metadata /usr/portage/packages
 
 RUN RM /portage-latest.tar.bz2
-RUN RM /portage-latest.tar.bz2
+RUN RM /stage3-i686-hardened-20151117.tar.bz2
 #Add Layman
 Run emerge --sync
 RUN emerge -v =dev-lang/python-2* =dev-lang/python-3* 
