--- a/x86-hardened/Dockerfile
+++ b/x86-hardened/Dockerfile
@@ -4,11 +4,12 @@ MAINTAINER   Necrose99 #Gentoo Docker Team
 
 
 #Add portage
+RUN cd /
 RUN wget -q -c http://distfiles.gentoo.org/releases/x86/autobuilds/current-stage3-i686-hardened/stage3-i686-hardened-20151117.tar.bz2
-ADD http://distfiles.gentoo.org/releases/x86/autobuilds/current-stage3-i686-hardened/stage3-i686-hardened-20151117.tar.bz2
+
 RUN wget -q -c  http://distfiles.gentoo.org/snapshots/portage-latest.tar.bz2 /
-ADD http://distfiles.gentoo.org/snapshots/portage-latest.tar.bz2 /
-RUN bzcat /stage3-i686-hardened-20151117.tar.bz2 | tar -xf - -C /
+
+RUN tar xvjpf stage3-*.tar.bz2 --xattrs /
 
 RUN bzcat /portage-latest.tar.bz2 | tar -xf - -C /usr
 RUN mkdir -p /usr/portage/distfiles /usr/portage/metadata /usr/portage/packages
