--- a/x86-hardened/Dockerfile
+++ b/x86-hardened/Dockerfile
@@ -2,10 +2,14 @@ FROM necrose99/gentoo-docker-x86
 # Hardend dont wana build the normal Way so OVERLAY it on a good Gentoo,
 MAINTAINER   Necrose99 #Gentoo Docker Team
 
-
+RUN eselect profile set i686-pc-linux-gnu-4.5.3-hardenednopie
+source /etc/profile
+emerge --oneshot gcc
+emerge --oneshot binutils virtual/libc
+emerge --depclean prelink
+emerge --emptytree --verbose @world
 #Add portage
 RUN cd /
-RUN wget -q -c http://distfiles.gentoo.org/releases/x86/autobuilds/current-stage3-i686-hardened/stage3-i686-hardened-20151117.tar.bz2
 
 RUN wget -q -c  http://distfiles.gentoo.org/snapshots/portage-latest.tar.bz2 /
 
