--- a/x86-hardened/Dockerfile
+++ b/x86-hardened/Dockerfile
@@ -3,18 +3,14 @@ FROM necrose99/gentoo-docker-x86
 MAINTAINER   Necrose99 #Gentoo Docker Team
 
 RUN eselect profile set i686-pc-linux-gnu-4.5.3-hardenednopie
-source /etc/profile
-emerge --oneshot gcc
-emerge --oneshot binutils virtual/libc
-emerge --depclean prelink
-emerge --emptytree --verbose @world
+RUN source /etc/profile
+RUN emerge --oneshot gcc
+RUN emerge --oneshot binutils virtual/libc
+RUN emerge --depclean prelink
+RUN emerge --emptytree --verbose @world
 #Add portage
 RUN cd /
-
 RUN wget -q -c  http://distfiles.gentoo.org/snapshots/portage-latest.tar.bz2 /
-
-RUN tar xvjpf stage3-*.tar.bz2 
-
 RUN bzcat /portage-latest.tar.bz2 | tar -xf - -C /usr
 RUN mkdir -p /usr/portage/distfiles /usr/portage/metadata /usr/portage/packages
 
@@ -23,5 +19,5 @@ RUN rm /stage3-i686-hardened-20151117.tar.bz2
 #Add Layman
 Run emerge --sync
 RUN emerge -v =dev-lang/python-2* =dev-lang/python-3* 
-Run Emerge -v git layman potage
-Run Emerge -v sys-fs/squashfs-tools app-arch/p7zip
+RUN Emerge -v git layman potage
+RUN  Emerge -v sys-fs/squashfs-tools app-arch/p7zip
