--- a/x86-hardened/Dockerfile
+++ b/x86-hardened/Dockerfile
@@ -1,4 +1,4 @@
 FROM scratch
 MAINTAINER Necrose99 necrose99@protonmail.net
-ADD stage3-i686-hardened-20151124.tar.bz2 /
+ADD http://distfiles.gentoo.org/releases/x86/autobuilds/current-stage3-i686/hardened/stage3-i686-hardened-20151124.tar.bz2 /
 CMD ["/bin/bash"]
