--- a/x86-hardened/Dockerfile
+++ b/x86-hardened/Dockerfile
@@ -1,6 +1,8 @@
 FROM scratch
 MAINTAINER Necrose99 necrose99@protonmail.net
 ADD http://distfiles.gentoo.org/releases/x86/autobuilds/current-stage3-i686/hardened/stage3-i686-hardened-20151124.tar.bz2 /
+ADD build.sh /
+#RUN /build.sh add more stuff via bash. and or add provisoning stub back. 
 RUN ["/bin/bash"]
 RUN env-update
 RUN source /etc/profile 
@@ -26,9 +28,5 @@ RUN bzcat /portage-latest.tar.bz2 | tar -xf - -C /usr
 RUN mkdir -p /usr/portage/distfiles /usr/portage/metadata /usr/portage/packages
 RUN rm /portage-latest.tar.bz2
 
-#Add Layman
-Run emerge-webrsync -q 
-Run Emerge -v sys-fs/squashfs-tools app-arch/p7zip 
-RUN emerge -v =dev-lang/python-2* =dev-lang/python-3* 
-Run Emerge -v git layman potage
+
 CMD ["/bin/bash"]
