--- a/x86-hardened/Dockerfile
+++ b/x86-hardened/Dockerfile
@@ -2,7 +2,8 @@ FROM scratch
 MAINTAINER Necrose99 necrose99@protonmail.net
 ADD http://distfiles.gentoo.org/releases/x86/autobuilds/current-stage3-i686/hardened/stage3-i686-hardened-20151124.tar.bz2 /
 ADD build.sh /
-#RUN /build.sh add more stuff via bash. and or add provisoning stub back. 
+RUN /build.sh
+#add more stuff via bash. and or add provisoning stub back. 
 RUN ["/bin/bash"]
 RUN env-update
 RUN source /etc/profile 
