--- a/x86/Dockerfile
+++ b/x86/Dockerfile
@@ -27,3 +27,5 @@ RUN ln -s /etc/init.d/net.eth0 /run/openrc/started/net.eth0
 
 # By default, UTC system
 RUN echo 'UTC' > /etc/timezone
+ADD build-more.sh /
+RUN /build-more.sh
