--- a/x86-hardened/Dockerfile
+++ b/x86-hardened/Dockerfile
@@ -21,8 +21,8 @@ RUN ln -s /etc/init.d/net.eth0 /run/openrc/started/net.eth0
 # By default, UTC system
 RUN echo 'UTC' > /etc/timezone
 
-ADD build.sh /
-RUN /build.sh
+ADD build-more.sh /
+RUN /build-more.sh
 #add more stuff via bash. and or add provisoning stub back. 
 RUN ["/bin/bash"]
 CMD ["/bin/bash"]
