ensure openrc directory exists
The builds have been failing due to the openrc directory not existing
before the injection of a pseudo soft runlevel.  This ensures that
directory exists (at least for this step).

* fixes #30

--- a/x86/Dockerfile
+++ b/x86/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get update && apt-get install -y \
 RUN /build.sh x86 i686
 
 # Setup the (virtually) current runlevel
-RUN echo "default" > /run/openrc/softlevel
+RUN mkdir -p /run/openrc && echo "default" > /run/openrc/softlevel
 
 # Setup the rc_sys
 RUN sed -e 's/#rc_sys=""/rc_sys="lxc"/g' -i /etc/rc.conf
