--- a/x86/Dockerfile
+++ b/x86/Dockerfile
@@ -1,32 +1,21 @@
 FROM 32bit/debian:jessie
 
 MAINTAINER Gentoo Docker Team
-VOLUME /usr/portage:rw", /usr/portage/distfiles:rw, /usr/portage/distfiles:rw
+
 #ADD http://www.busybox.net/downloads/binaries/latest/busybox-i686 /busybox
 
 # This one should be present by running the build.sh script
 ADD build.sh /
-
+#ADD build-more.sh /
 RUN apt-get update && apt-get install -y \
 	wget bzip2
 
 RUN /build.sh x86 i686
 
-# Setup the (virtually) current runlevel
-RUN echo "default" > /run/openrc/softlevel
-
 # Setup the rc_sys
 RUN sed -e 's/#rc_sys=""/rc_sys="lxc"/g' -i /etc/rc.conf
-
-# Setup the net.lo runlevel
-RUN ln -s /etc/init.d/net.lo /run/openrc/started/net.lo
-
-# Setup the net.eth0 runlevel
-RUN ln -s /etc/init.d/net.lo /etc/init.d/net.eth0
-RUN ln -s /etc/init.d/net.eth0 /run/openrc/started/net.eth0
 
 # By default, UTC system
 RUN echo 'UTC' > /etc/timezone
 
-ADD build-more.sh /
-RUN /build-more.sh
+#RUN /build-more.sh
