--- a/amd64-nomultilib/Dockerfile
+++ b/amd64-nomultilib/Dockerfile
@@ -8,7 +8,7 @@ ADD build.sh /
 RUN /build.sh amd64 x86_64 -nomultilib
 
 # Setup the rc_sys
-RUN sed -e 's/#rc_sys=""/rc_sys="lxc"/g' -i /etc/rc.conf
+RUN sed -e 's/#rc_sys=""/rc_sys="docker"/g' -i /etc/rc.conf
 
 # By default, UTC system
 RUN echo 'UTC' > /etc/timezone
