--- a/adm64-stage4-cloud/dockerfile
+++ b/adm64-stage4-cloud/dockerfile
@@ -5,7 +5,7 @@ VOLUME /usr/portage:rw", /usr/portage/distfiles:rw, /usr/portage/distfiles:rw
 # This one should be present by running the build.sh script
 ADD build.sh /
 
-RUN /build.sh amd64 x86_64
+RUN /build.sh amd64 cloud
 
 # Setup the (virtually) current runlevel
 RUN echo "default" > /run/openrc/softlevel
