--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,12 @@ env:
     - TARGET=stage3-amd64-hardened-nomultilib
     - TARGET=stage3-amd64-nomultilib
     - TARGET=stage3-amd64-systemd
+    - TARGET=stage3-amd64-musl-vanilla
+    - TARGET=stage3-amd64-musl-hardened
     - TARGET=stage3-x86
     - TARGET=stage3-x86-hardened
     - TARGET=stage3-armv7a
+    - TARGET=stage3-x86-musl-vanilla
     - TARGET=stage3-ppc
     - TARGET=stage3-ppc64
     - TARGET=stage3-ppc64le
