--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,9 @@ env:
     - TARGET=stage3-ppc64le
 
 before_install:
-  # Install docker 17.05.0 or later
+  # Install latest Docker
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
   - sudo apt-get update -qq
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
   - echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
