--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
     - ORG=gentoo
   jobs:
     - TARGET=portage
-    - TARGET=stage3-amd64
+    - TARGET=stage3-amd64 LATEST=true
     - TARGET=stage3-amd64-hardened
     - TARGET=stage3-amd64-hardened-nomultilib
     - TARGET=stage3-amd64-musl-hardened
@@ -44,7 +44,7 @@ script:
   - ./build.sh
 after_success:
   # Inspect built image
-  - docker image inspect "${ORG}/${TARGET}:latest"
+  - docker image inspect "${ORG}/${TARGET/-/:}"
   # Run `emerge --info` for stage builds
   - |
     if [[ "${TARGET}" == stage* ]]; then
@@ -53,11 +53,12 @@ after_success:
         # Enable execution of foreign binary formats (i.e., non-amd64/x86)
         docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
       fi
-      docker run --rm "${ORG}/${TARGET}:latest" emerge --info
+      docker run --rm "${ORG}/${TARGET/-/:}" emerge --info
     fi
   # Push all built images to Docker Hub (cron daily task)
   - |
     if [[ "${TRAVIS_PULL_REQUEST_BRANCH:-${TRAVIS_BRANCH}}" == "master" && "${TRAVIS_EVENT_TYPE}" == "cron" ]]; then
       echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
-      docker push "${ORG}/${TARGET}"
+      REPO="$(cut -d '-' -f 1 <<< ${TARGET})"
+      docker push "${ORG}/${REPO}"
     fi
