--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,8 @@ jobs:
           - stage3-armv6j_hardfp
           - stage3-armv7a_hardfp
           - stage3-ppc64le
+          - stage3-ppc64le-musl-hardened
+          - stage3-ppc64le-systemd
           - stage3-s390x
           - stage3-x86
           - stage3-x86-hardened
