generate containers for riscv64 (lp64 & lp64d one-level)
multilib support is still under testing. leave it out for now

Signed-off-by: alexfanqi <alexfanqi@yahoo.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,10 @@ jobs:
           - stage3-ppc64le-musl-hardened-openrc
           - stage3-ppc64le-openrc
           - stage3-ppc64le-systemd
+          - stage3-rv64_lp64-openrc
+          - stage3-rv64_lp64-systemd
+          - stage3-rv64_lp64d-openrc
+          - stage3-rv64_lp64d-systemd
           - stage3-s390x
     name: ${{ matrix.target }}
     runs-on: ubuntu-latest
