--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,15 +24,15 @@ jobs:
           - stage3-amd64-nomultilib-systemd
           - stage3-amd64-openrc
           - stage3-amd64-systemd
-          - stage3-armv5tel
+          - stage3-armv5tel-openrc
           - stage3-armv5tel-systemd
-          - stage3-armv6j
+          - stage3-armv6j-openrc
           - stage3-armv6j-systemd
-          - stage3-armv6j_hardfp
+          - stage3-armv6j_hardfp-openrc
           - stage3-armv6j_hardfp-systemd
-          - stage3-armv7a
+          - stage3-armv7a-openrc
           - stage3-armv7a-systemd
-          - stage3-armv7a_hardfp
+          - stage3-armv7a_hardfp-openrc
           - stage3-armv7a_hardfp-systemd
           - stage3-arm64
           - stage3-arm64-systemd
