Add stage3:desktop (just amd64-desktop-openrc for now)
In particular, this is useful for CI for upstreams who don't
want to have to build X etc just to run their test suite.

Signed-off-by: Sam James <sam@gentoo.org>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
           - stage3-amd64-nomultilib-openrc
           - stage3-amd64-nomultilib-systemd
           - stage3-amd64-openrc
+          - stage3-amd64-desktop-openrc
           - stage3-amd64-systemd
           - stage3-armv5tel-openrc
           - stage3-armv5tel-systemd
