Build arm64-musl image
Bug: https://github.com/rui314/mold/issues/281
Signed-off-by: Sam James <sam@gentoo.org>
Signed-off-by: Alexys Jacob <ultrabug@gentoo.org>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
           - stage3-armv7a_hardfp-openrc
           - stage3-armv7a_hardfp-systemd
           - stage3-arm64
+          - stage3-arm64-musl
           - stage3-arm64-systemd
           - stage3-i686-hardened-openrc
           - stage3-i686-musl
