--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
           - stage3-armv6j_hardfp-systemd
           - stage3-armv7a-openrc
           - stage3-armv7a-systemd
+          - stage3-armv7a_hardfp_musl-openrc
           - stage3-armv7a_hardfp-openrc
           - stage3-armv7a_hardfp-systemd
           - stage3-arm64
