--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,8 +36,11 @@ jobs:
           - stage3-armv7a_hardfp_musl-openrc
           - stage3-armv7a_hardfp-openrc
           - stage3-armv7a_hardfp-systemd
-          - stage3-arm64
+          - stage3-arm64-desktop-openrc
+          - stage3-arm64-desktop-systemd
           - stage3-arm64-musl
+          - stage3-arm64-musl-hardened
+          - stage3-arm64-openrc
           - stage3-arm64-systemd
           - stage3-i686-hardened-openrc
           - stage3-i686-musl
