adjust s390x image names
Should fix s390x builds.

Closes: https://github.com/gentoo/gentoo-docker-images/pull/123
Signed-off-by: John Helmert III <ajak@gentoo.org>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,8 @@ jobs:
           - stage3-rv64_lp64-systemd
           - stage3-rv64_lp64d-openrc
           - stage3-rv64_lp64d-systemd
-          - stage3-s390x
+          - stage3-s390x-openrc
+          - stage3-s390x-systemd
     name: ${{ matrix.target }}
     runs-on: ubuntu-latest
     env:
