--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         target:
+          - python
           - portage
           - stage3-amd64-hardened-nomultilib-openrc
           - stage3-amd64-hardened-openrc
@@ -67,7 +68,11 @@ jobs:
       - name: Set up buildx
         uses: docker/setup-buildx-action@v2
       - name: Build image
+        if: startswith(matrix.target, 'stage3') || startswith(matrix.target, 'portage')
         run: ./build.sh
+      - name: Build python image
+        if: startswith( matrix.target, 'python')
+        run: ./build-python.sh
       - name: Inspect image
         run: docker image inspect "${ORG}/${TARGET/-/:}"
       - name: Inspect portage
