--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,34 +58,12 @@ jobs:
           - stage3-s390x-systemd
     name: ${{ matrix.target }}
     runs-on: ubuntu-latest
-    env:
-      TARGET: ${{ matrix.target }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Build image
-        if: startswith(matrix.target, 'stage3') || startswith(matrix.target, 'portage')
-        run: ./build.sh
-      - name: Build python image
-        if: startswith( matrix.target, 'python')
-        run: ./build-python.sh
-      - name: Inspect image
-        run: docker image inspect "${ORG}/${TARGET/-/:}"
-      - name: Inspect portage
-        if: matrix.target != 'portage'
-        run: docker run --rm "${ORG}/${TARGET/-/:}" emerge --info
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        if: github.event_name == 'schedule'
+      - name: Build ${{ matrix.target }}
+        uses: ./.github/actions/container_build
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Push image
-        if: github.event_name == 'schedule'
-        env:
-          DOCKER_CLI_EXPERIMENTAL: enabled
-        run: ./deploy.sh
+          target: ${{ matrix.target }}
+          dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
+          dockerhub_password: ${{ secrets.DOCKERHUB_PASSWORD }}
