actions: also push to Dockerhub on push
Limiting Dockerhub pushes to "scheduled" Actions runs was intended to
prevent these bits from running in PRs, but we also want changes to be
applied for regular pushes to the repository, so we allow 'push'. To
avoid this failing in forks without the requisite secrets, we also
limit these to repositories in Gentoo's namespace.

Signed-off-by: John Helmert III <ajak@gentoo.org>

--- a/.github/actions/container_build/action.yml
+++ b/.github/actions/container_build/action.yml
@@ -34,12 +34,16 @@ runs:
       run: docker run --rm "${ORG}/${TARGET/-/:}" emerge --info
     - name: Login to DockerHub
       uses: docker/login-action@v2
-      if: github.event_name == 'schedule'
+      if: |
+        github.repository_owner == 'gentoo' &&
+        (github.event_name == 'schedule' || github.event_name == 'push')
       with:
         username: ${{ inputs.dockerhub_username }}
         password: ${{ inputs.dockerhub_password }}
     - name: Push image
-      if: github.event_name == 'schedule'
+      if: |
+        github.repository_owner == 'gentoo' &&
+        (github.event_name == 'schedule' || github.event_name == 'push')
       shell: bash
       env:
         DOCKER_CLI_EXPERIMENTAL: enabled
