--- a/.github/actions/container_build/action.yml
+++ b/.github/actions/container_build/action.yml
@@ -35,14 +35,14 @@ runs:
     - name: Login to DockerHub
       uses: docker/login-action@v2
       if: |
-        github.repository_owner == 'gentoo' &&
+        github.ref_name == 'master' && github.repository_owner == 'gentoo' &&
         (github.event_name == 'schedule' || github.event_name == 'push')
       with:
         username: ${{ inputs.dockerhub_username }}
         password: ${{ inputs.dockerhub_password }}
     - name: Push image
       if: |
-        github.repository_owner == 'gentoo' &&
+        github.ref_name == 'master' && github.repository_owner == 'gentoo' &&
         (github.event_name == 'schedule' || github.event_name == 'push')
       shell: bash
       env:
