--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,41 +21,41 @@ jobs:
           - stage3-amd64-musl
           - stage3-amd64-musl-hardened
           - stage3-amd64-nomultilib-openrc
-          - stage3-amd64-nomultilib-systemd-mergedusr
+          - stage3-amd64-nomultilib-systemd
           - stage3-amd64-openrc
           - stage3-amd64-desktop-openrc
-          - stage3-amd64-systemd-mergedusr
-          - stage3-amd64-desktop-systemd-mergedusr
+          - stage3-amd64-systemd
+          - stage3-amd64-desktop-systemd
           - stage3-armv5tel-openrc
-          - stage3-armv5tel-systemd-mergedusr
+          - stage3-armv5tel-systemd
           - stage3-armv6j-openrc
-          - stage3-armv6j-systemd-mergedusr
+          - stage3-armv6j-systemd
           - stage3-armv6j_hardfp-openrc
-          - stage3-armv6j_hardfp-systemd-mergedusr
+          - stage3-armv6j_hardfp-systemd
           - stage3-armv7a-openrc
-          - stage3-armv7a-systemd-mergedusr
+          - stage3-armv7a-systemd
           - stage3-armv7a_hardfp_musl-openrc
           - stage3-armv7a_hardfp-openrc
-          - stage3-armv7a_hardfp-systemd-mergedusr
+          - stage3-armv7a_hardfp-systemd
           - stage3-arm64-desktop-openrc
-          - stage3-arm64-desktop-systemd-mergedusr
+          - stage3-arm64-desktop-systemd
           - stage3-arm64-musl
           - stage3-arm64-musl-hardened
           - stage3-arm64-openrc
-          - stage3-arm64-systemd-mergedusr
+          - stage3-arm64-systemd
           - stage3-i686-hardened-openrc
           - stage3-i686-musl
           - stage3-i686-openrc
-          - stage3-i686-systemd-mergedusr
+          - stage3-i686-systemd
           - stage3-ppc64le-musl-hardened-openrc
           - stage3-ppc64le-openrc
-          - stage3-ppc64le-systemd-mergedusr
+          - stage3-ppc64le-systemd
           - stage3-rv64_lp64-openrc
-          - stage3-rv64_lp64-systemd-mergedusr
+          - stage3-rv64_lp64-systemd
           - stage3-rv64_lp64d-openrc
-          - stage3-rv64_lp64d-systemd-mergedusr
+          - stage3-rv64_lp64d-systemd
           - stage3-s390x-openrc
-          - stage3-s390x-systemd-mergedusr
+          - stage3-s390x-systemd
     name: ${{ matrix.target }}
     runs-on: ubuntu-latest
     steps:
