--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ env:
 
 jobs:
   build:
+    continue-on-error: true
     strategy:
       fail-fast: false
       matrix:
@@ -63,6 +64,35 @@ jobs:
         uses: actions/checkout@v3
       - name: Build ${{ matrix.target }}
         uses: ./.github/actions/container_build
+        with:
+          target: ${{ matrix.target }}
+          dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
+          dockerhub_password: ${{ secrets.DOCKERHUB_PASSWORD }}
+  build-manifests:
+    if: |
+      github.ref_name == 'master' && github.repository_owner == 'gentoo' &&
+      (github.event_name == 'schedule' || github.event_name == 'push')
+    needs: [build]
+    strategy:
+      fail-fast: false
+      matrix:
+        target:
+          - stage3:latest
+          - stage3:desktop
+          - stage3:hardened
+          - stage3:hardened-nomultilib
+          - stage3:musl
+          - stage3:musl-hardened
+          - stage3:nomultilib
+          - stage3:nomultilib-systemd
+          - stage3:systemd
+    name: ${{ matrix.target }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Build ${{ matrix.target }}
+        uses: ./.github/actions/manifest_build
         with:
           target: ${{ matrix.target }}
           dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
