Add generic "t64" and "t64-systemd" aliases
Add generic "t64" and "t64-systemd" aliases that cover all images with
64-bit time_t: both t64 images for 32-bit architectures and the regular
images for 64-bit architectures.  This makes it possible to use:

    FROM gentoo/stage3:t64

to get a system with 64-bit time_t without having to separately cover
individual architectures.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,6 +97,8 @@ jobs:
           - stage3:ssemath-t64
           - stage3:ssemath-t64-systemd
           - stage3:systemd
+          - stage3:t64
+          - stage3:t64-systemd
     name: ${{ matrix.target }}
     runs-on: ubuntu-latest
     steps:
