Revert "Rename 'portage' to 'gentoo'"
This reverts commit 5dd61309bcee4f2cb9f840bbcaea74e7d3f03d31.

I suspect this is too heavy handed but wanted the changes needed there
for posterity.

Signed-off-by: Sam James <sam@gentoo.org>

--- a/.github/actions/container_build/action.yml
+++ b/.github/actions/container_build/action.yml
@@ -18,7 +18,7 @@ runs:
       run: echo "TARGET=${{ inputs.target }}" | tee $GITHUB_ENV
       shell: bash
     - name: Build image
-      if: startswith(inputs.target, 'stage3') || startswith(inputs.target, 'gentoo')
+      if: startswith(inputs.target, 'stage3') || startswith(inputs.target, 'portage')
       shell: bash
       run: ./build.sh
     - name: Build python image
@@ -28,8 +28,8 @@ runs:
     - name: Inspect image
       shell: bash
       run: docker image inspect "${ORG}/${TARGET/-/:}"
-    - name: Inspect gentoo
-      if: matrix.target != 'gentoo'
+    - name: Inspect portage
+      if: matrix.target != 'portage'
       shell: bash
       run: docker run --rm "${ORG}/${TARGET/-/:}" emerge --info
     - name: Login to DockerHub
